# msl-nlf

./: .coveragerc  .gitignore  404.html  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  run-tests.yml  tests.yml
about/developers/: index.html
about/license/: index.html
about/release-notes/: index.html
api/datatypes/: index.html
api/loader/: index.html
api/model/: index.html
api/models/: index.html
api/parameters/: index.html
assets/: Nelson.cpp  Nelson.h  Roszman1.cpp  Roszman1.h  beta.dpr  example_damped_oscillator.txt  example_weighted_correlated_input.txt  example_weighted_correlated_result.txt
compiled_functions/: index.html
docs/: 32vs64bit.rst  api.rst  compiled_functions.md  conf.py  example_damped_oscillator_composite.rst  example_gtc.rst  example_matplotlib.rst  example_weighted_and_correlated.rst  examples.rst  getting_started.md  getting_started.rst  index.md  index.rst  install.md  install.rst  user_defined.rst
docs/_api/: msl.nlf.client_server.rst  msl.nlf.datatypes.rst  msl.nlf.delphi.rst  msl.nlf.dll.rst  msl.nlf.loader.rst  msl.nlf.model.rst  msl.nlf.models.rst  msl.nlf.parameter.rst  msl.nlf.saver.rst
docs/_static/: Nelson.cpp  Nelson.h  Roszman1.cpp  beta.dpr  example_damped_oscillator.txt  example_weighted_correlated_input.txt  example_weighted_correlated_result.txt
docs/_static/css/: custom.css
docs/api/: datatypes.md  loader.md  model.md  models.md  parameters.md
docs/assets/: Nelson.cpp  Roszman1.cpp  Roszman1.h  beta.dpr
docs/examples/: damped_oscillator_composite.md  gtc.md  matplotlib.md  weighted_and_correlated.md
examples/damped_oscillator_composite/: index.html
examples/gtc/: index.html
examples/matplotlib/: index.html
examples/weighted_and_correlated/: index.html
getting_started/: index.html
install/: index.html
msl/nlf/: __init__.py  client_server.py  datatypes.py  dll.py  loader.py  model.py  models.py  parameter.py  saver.py
search/: search_index.json
src/msl/examples/nlf/: __init__.py
src/msl/nlf/: __about__.py  __init__.py  _types.py  client_server.py  datatypes.py  delphi.py  dll.py  loader.py  model.py  models.py  parameter.py  parameters.py  saver.py  types.py
tests/: conftest.py  test_bitness.py  test_composite.py  test_correlations.py  test_delphi_raises.py  test_dll_raises.py  test_dof.py  test_eof.py  test_equation.py  test_equation_replaced.py  test_evaluate.py  test_fit_arrays.py  test_fit_constant.py  test_fit_demo.py  test_fit_simple_cases.py  test_gtc.py  test_guess.py  test_issues.py  test_load.py  test_nist.py  test_options.py  test_parameters.py  test_save.py  test_show_warnings.py  test_str.py  test_user_defined.py  test_version.py  test_win32.py
tests/NIST_datasets/: README.rst  _nist.py
tests/nlf/: 3_0.nlf  5_41.nlf  5_41_empty.nlf  5_43.nlf
tests/user_defined/: Nelson_arm64.dylib  Nelson_x64.dylib  Roszman1_x64.dylib
tests/user_defined/multiple/: Roszman1_arm64.dylib
